# dqmc

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml  make.yml
assets/: data.csv
example/: README.md  config.cfg  config.toml
example/output/: bosonic_fields_0.out  charge_density_structure_factor.bins.out  charge_density_structure_factor_0.out  density_of_states.bins.out  density_of_states_0.out  double_occupancy.bins.out  double_occupancy_0.out  dss.bins.out  dss_0.out  dynamic_pair_corr.bins.out  dynamic_pair_corr_0.out  equaltime_sign.bins.out  equaltime_sign_0.out  filling_number.bins.out  filling_number_0.out  greens_0.out  greens_functions.bins.out  greens_functions_0.out  kinetic_energy.bins.out  kinetic_energy_0.out  kstars.out  local_spin_corr.bins.out  local_spin_corr_0.out  momentum_distribution.bins.out  momentum_distribution_0.out  pair_pair_corr_Q.bins.out  pair_pair_corr_Q_0.out  s_wave_pairing_corr_0.out  spin_density_structure_factor.bins.out  spin_density_structure_factor_0.out  superfluid_stiffness.bins.out  superfluid_stiffness_0.out  swave.bins.out
include/: dqmc.h  dqmc_initializer.h  dqmc_io.h  dqmc_walker.h  initializer.h  io.h  random.h  svd_stack.h  walker.h
include/checkerboard/: checkerboard_base.h  cubic.h  square.h
include/lattice/: chain.h  cubic.h  honeycomb.h  indexer.h  lattice_base.h  square.h
include/measure/: binning_analyzer.h  measure_context.h  measure_handler.h  measure_methods.h  observable.h  observable_handler.h
include/model/: attractive_hubbard.h  model_base.h  repulsive_hubbard.h
include/utils/: assert.h  eigen_boost_serialization.hpp  eigen_malloc_guard.h  format_output.h  linear_algebra.hpp  logger.h  mpi.hpp  numerical_stable.hpp  progressbar.hpp  spinner.h  temporary_pool.h  toml.hpp
scripts/: parallel_run.sh
src/: CMakeLists.txt  dqmc.cpp  dqmc_initializer.cpp  dqmc_main.cpp  dqmc_walker.cpp  initializer.cpp  io.cpp  main.cpp  random.cpp  svd_stack.cpp  walker.cpp
src/checkerboard/: square.cpp
src/lattice/: chain.cpp  cubic.cpp  lattice_base.cpp  square.cpp
src/measure/: binning_analyzer.cpp  measure_handler.cpp  measure_methods.cpp  observable_handler.cpp
src/model/: attractive_hubbard.cpp  model_base.cpp  repulsive_hubbard.cpp
src/utils/: assert.cpp  logger.cpp  numerical_stable.cpp  temporary_pool.cpp
test/: CMakeLists.txt  placeholder_test.cpp  test_main.cpp
test/measure/: test_binning_analyzer.cpp
tools/: aggregate_results.py  bissect.py  compare.py  consistency_check.py  convert_greens_function_to_imaginary_time.py  dos.out.1  dos.out.2  format.py  format.py~  make.sh  parallel.py  plot.R  run.sh
